packages/astro/e2e/fixtures/errors/src/components/svelte/SvelteSyntaxError.svelte
<h1>Tag mismatch</div>
